kustomize/components/prometheus/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: infra-prometheus
  name: infra-prometheus
spec:
