kustomize/components/prometheus/ingress-alertmanager.yaml
---
# whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`alertmanager.example.com`)
      kind: Rule
      services:
        - name: alertmanager-main
          port: web
  tls:
    secretName: alertmanager-cert-tls
