kustomize/components/prometheus/ingress-prometheus.yaml
---
# whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.example.com`)
      kind: Rule
      services:
        - name: prometheus-main
          port: web
  tls:
    secretName: prometheus-cert-tls
